--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1>AirHUST无人机穿环视频</h1>
         <video controls autoplay muted playsinline
             poster="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='800' height='450'%3E%3Crect width='100%25' height='100%25' fill='%23111'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-size='24' fill='%23666'%3E正在加载视频...%3C/text%3E%3C/svg%3E">
-            <source src="穿环视频.mp4" type="video/mp4">
+            <source src="AirHUST穿环视频.mp4" type="video/mp4">
             您的浏览器不支持视频播放，请升级或更换浏览器。
         </video>
     </div>
